# acuity-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260518_0001_initial.py
backend/scripts/: generate_test_set.py  run_eval.py  seed_corpus.py  seed_fake.py
backend/src/rag/: db.py  main.py  models.py  schemas.py
backend/src/rag/api/: chat.py  eval_routes.py  health.py  search.py
backend/src/rag/core/: config.py  llm.py  logging.py
backend/src/rag/eval/: faithfulness.py  metrics.py  ragas_runner.py  runner.py  test_set.py
backend/src/rag/generation/: answer.py  citations.py  guardrails.py  prompts.py
backend/src/rag/ingestion/: arxiv_fetch.py  chunking.py  embed.py  pipeline.py
backend/src/rag/retrieval/: bm25.py  hybrid.py  rerank.py  semantic.py
backend/tests/: conftest.py  test_chunking.py  test_citations.py  test_metrics.py  test_rrf.py
docs/: architecture.md  eval-results.md
eval/: test_questions.jsonl
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/eval/: page.tsx
frontend/app/history/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: answer-text.tsx  app-shell.tsx  chat.tsx  citation-marker.tsx  demo-data.ts  eval-dashboard.tsx  grounding-meter.tsx  sources-list.tsx
frontend/components/ui/: badge.tsx  card.tsx  metric-card.tsx
frontend/lib/: api.ts
