[project]
name = "rag"
version = "0.1.0"
description = "Production RAG with hybrid retrieval, citations, and evals"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pgvector>=0.3.6",
    "anthropic>=0.40",
    "openai>=1.55",
    "httpx>=0.27",
    "tenacity>=9.0",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "tiktoken>=0.8",
    "pypdf>=5.1",
    "arxiv>=2.1",
    "sentence-transformers>=3.3",
    "numpy>=1.26,<2.2",
    "scikit-learn>=1.5",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "A", "C4", "T20", "SIM", "RUF"]
ignore = ["S101", "S608", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20"]
"scripts/*" = ["T20"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "arxiv.*", "sentence_transformers.*", "pypdf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
